--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,47 @@ img {
 .superinfo a {
   color: inherit;
 }
+
+/* Menu */
+.menu-bg {
+  background-color: #2c70ff;
+}
+
+.menu {
+  max-width: 1160px;
+  margin: 0 auto;
+  padding: 16px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px 40px;
+}
+
+.menu a {
+  color: #ffffff;
+}
+
+.menu-logo a {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  font-weight: 700;
+}
+
+.menu-nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 40px;
+}
+
+.menu-nav a {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.4;
+  display: block;
+  padding: 10px 0;
+}
+
+.menu-nav a:hover {
+  color: #122ab2;
+}
