--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ img {
 }
 
 .superinfo {
-  max-width: 1160px;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -56,7 +56,7 @@ img {
 }
 
 .menu {
-  max-width: 1160px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 16px 20px;
   display: flex;
@@ -92,4 +92,56 @@ img {
 
 .menu-nav a:hover {
   color: #122ab2;
+}
+
+/* Introdução */
+.texto-intro {
+  font-size: 3rem;
+  line-height: 1.1;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 60px 20px 0px 20px;
+}
+
+.texto-intro::after {
+  content: "";
+  width: 1160;
+  height: 2px;
+  background-color: #2c70ff;
+  display: block;
+  margin-top: 60px;
+}
+
+/* Sobre */
+.sobre {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 60px 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.sobre-info {
+  flex: 2 1 300px;
+}
+
+.sobre-info h1 {
+  font-size: 3rem;
+  line-height: 1;
+  margin-bottom: 24px;
+}
+
+.sobre-info p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+  margin-bottom: 16px;
+  color: #939393;
+}
+
+.sobre-img {
+  flex: 1 1 160px;
+  max-width: 100%;
+  height: 100%;
+  width: 100%;
 }
