--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,53 @@ img {
   height: 100%;
   width: 100%;
 }
+
+/* Produtos */
+.produtos {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.produtos::before {
+  content: "";
+  width: 1160;
+  height: 2px;
+  background-color: #2c70ff;
+  display: block;
+  margin-bottom: 60px;
+}
+
+.produtos h1 {
+  font-size: 3rem;
+  margin-bottom: 60px;
+}
+
+.produtos-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: end;
+  gap: 10px 20px;
+}
+
+.produtos-item {
+  flex: 1 1 175px;
+}
+
+.produtos-item h2 {
+  font-size: 3rem;
+  color: #a5a5a5;
+  background-color: #f6f6f6;
+  padding: 60px 20px;
+}
+
+.purple {
+  border-top: 8px solid #ae81ff;
+}
+
+.pink {
+  border-top: 8px solid #f9265e;
+}
+
+.blue {
+  border-top: 8px solid #66d9eb;
+}
