--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,49 @@ img {
   text-align: center;
 }
 
+/* Qualidade */
+.qualidade {
+  max-width: 1200px;
+  margin: 60px auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 20px;
+}
+
+.qualidade-item {
+  flex: 1 1 300px;
+}
+
+.qualidade-item h2 {
+  font-size: 2.25rem;
+  color: #a4a4a4;
+  margin-bottom: 16px;
+}
+
+.qualidade-item h2::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 30px;
+  margin-right: 12px;
+}
+
+.qualidade-item:nth-of-type(3n + 1) h2::before {
+  background-color: #ae81ff;
+}
+.qualidade-item:nth-of-type(3n + 2) h2::before {
+  background-color: #f9265e;
+}
+.qualidade-item:nth-of-type(3n + 3) h2::before {
+  background-color: #66d9eb;
+}
+
+.qualidade-item p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+  color: #a5a5a5;
+}
+
 @media (max-width: 800px) {
   .preco {
     padding-left: 10px;
