--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,83 @@ img {
   color: #a5a5a5;
 }
 
+/* Newsletter */
+.newsletter {
+  background-color: #f7f7f7;
+  padding: 60px calc((100% - 1200px) / 2);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 260px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 3rem;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-size: 1.25rem;
+  font-style: italic;
+  max-width: 230px;
+  color: #7c7c7c;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 11 200px;
+  font-size: 1.25rem;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  border: 4px solid #2c70ff;
+  background-color: transparent;
+  padding: 15px 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 200px;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: #2c70ff;
+  color: #ffffff;
+  margin: 0px;
+  cursor: pointer;
+  border: 0px;
+  padding: 15px 10px;
+  text-align: center;
+}
+
+/* Footeer */
+.footer {
+  display: flex;
+  background-color: #2c70ff;
+  height: 200px;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 1.75rem;
+  color: #122ab2;
+}
+
 @media (max-width: 800px) {
   .preco {
     padding-left: 10px;
@@ -325,5 +402,11 @@ img {
   }
   .preco .preco-item:nth-child(2) {
     order: -1;
+  }
+}
+
+@media (max-width: 600px) {
+  .newsletter-form button {
+    font-size: 1.5rem;
   }
 }
